--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Ikratos-MD-v1",
+    "name": "Dinuwa-Official-USER-BOT-V2",
     "version": "1.0.0",
-    "description": "Ikratos-MD-v1, A Multi-functional simple and light weight whatsapp bot.",
+    "description": "Dinuwa-Official-USER-BOT-V2, A Multi-functional simple and light weight whatsapp bot.",
     "main": "index.js",
     "type": "module",
     "directories": {
@@ -28,7 +28,7 @@
     ],
     "homepage": "https://github.com/xIKRATOSx/Ikratos-MD-v1",
     "author": {
-        "name": "xIKRATOSx"
+        "name": "Dinuwa Official²⁰²³"
     },
     "repository": {
         "type": "git",
